--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -19,3 +19,39 @@ main {
   flex-wrap: wrap;
   flex-direction: column;
 }
+
+.intro {
+  padding: 1em 3em;
+}
+
+header {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  flex-wrap: wrap;
+  flex-direction: column;
+  text-align: center;
+  margin: 20px;
+  .name {
+    margin: 5px;
+    font-size: 3em;
+  }
+  .title {
+    margin: 5px;
+  }
+  img {
+    display: block;
+    align-self: center;
+    border-radius: 50%;
+    margin: 5px;
+    max-width: 150px;
+  }
+}
+
+.links {
+  font-size: 2em;
+  justify-content: center;
+  svg {
+    margin: 5px;
+  }
+}
