--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -12,12 +12,28 @@ code {
     monospace;
 }
 
+$blue: #C5EFF7;
+$darker: #333D3F;
+
+a {
+  color: $darker;
+  &:visited {
+    color: $darker;
+  }
+  &:hover {
+    color: #4B88A2;
+  }
+}
+
 main {
+  background-color: $blue;
   display: flex;
   align-content: center;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   flex-direction: column;
+  height: 100vh;
 }
 
 .intro {
@@ -32,18 +48,22 @@ header {
   flex-direction: column;
   text-align: center;
   margin: 20px;
+  align-items: center;
   .name {
+    color: $darker;
     margin: 5px;
     font-size: 3em;
+    font-weight: 500;
   }
   .title {
     margin: 5px;
+    font-size: 16pt;
   }
   img {
     display: block;
     align-self: center;
     border-radius: 50%;
-    margin: 5px;
+    margin: 15px;
     max-width: 150px;
   }
 }
