--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -70,7 +70,8 @@ header {
 .links {
   font-size: 2em;
   justify-content: center;
+  margin: 15px;
   svg {
-    margin: 15px;
+    margin: 0 10px;
   }
 }
