Added image border

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -75,6 +75,7 @@ header {
     display: block;
     align-self: center;
     border-radius: 50%;
+    border: 6px solid $color1;
     margin: 15px;
     max-width: 240px;
   }
