--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -69,12 +69,12 @@ header {
   }
   .name {
     margin: 10px;
-    font-size: 3em;
+    font-size: 4rem;
     font-weight: 700;
   }
   .title {
     color: $color0;
-    font-size: 16pt;
+    font-size: 1.8rem;
     font-weight: 500;
     transition: color 200ms;
     &:hover {
@@ -85,7 +85,7 @@ header {
 }
 
 .links {
-  font-size: 2em;
+  font-size: 2.8rem;
   justify-content: center;
   margin: 20px;
   svg {
